@@ -147,7 +147,9 @@ m169	ATMEGA169
 m128	ATMEGA128
 m103	ATMEGA103
 m16	ATMEGA16
+m8	ATMEGA48
 m8	ATMEGA8
+m8	ATMEGA88
 .TE
 .Bl -tag -width "(*) "
 .It "(*)"
